--- a/right.html
+++ b/right.html
@@ -27,8 +27,8 @@
 					<b>你想对我说什么。嘻嘻</b>
 				</font>
 				<br><br/>
-				<form action='no' >
-					<textarea cols='35' rows='10'>
+				<form >
+					<textarea name="text" cols='35' rows='10'>
 					
 					</textarea>
 					<br></br>
