--- a/left.html
+++ b/left.html
@@ -9,10 +9,10 @@
 		<p><b>我做了</b></p>
 		<ol >
 		   <li>
-			<b>mysql入门</b>
+			<b>mysql入门,一个字数统计网站</b>
 			</li>
 		   <li>
-			<b>正在学python就业班课程</b>
+			<b>正在学Django</b>
 			</li>
 		    <li>
 			<b>。。。</b>
