--- a/bottom.html
+++ b/bottom.html
@@ -10,7 +10,7 @@
 			<b>林盛斌目前想说的话</b>
 		</p>
 		<p class="b_think1">
-			<b>好了这下子我用别人的服务器，也能让全世界都看到我的这个网页了。。。。。</b>
+			<b>牙疼。。。。。</b>
 		</p>
 		<p class="b_think2">
 			<b>林盛斌的学习心得</b>
@@ -20,6 +20,7 @@
 		</p>
 		<div style="position: absolute; bottom: 10px; right: 10px;">
 		<font  color=darkgreen size="3">
+			<b>2019/1/30-----第三次更</b><br/>
 			<b>2019/1/29-----第二次更</b><br/>
 			<b>2019/1/27-----第一次更</b>
 		</font>
